--- a/labscript_devices/BS_341A/BS_341A.md
+++ b/labscript_devices/BS_341A/BS_341A.md
@@ -3,14 +3,16 @@
 [Manual](https://www.manualslib.com/manual/1288197/Stahl-Electronics-Bs-Series.html?page=28#manual)
 
 Interface: USB 
-- standard setting: 9600 baud, no handshake
-- fast-mode settings: 115200 baud
-Output: BNC (voltage analog output)
+- standard setting: 9600 baud
 
 ---
 ## Remote commands
 IDN | Identify
+
 DDDDD CHXX Y.YYYYY | Set voltage
+
 DDDDD TEMP | Read Temperature
+
 DDDDD LOCK | Check lock status of all channels
+
 DDDDD DIS [message] | Send string to LCD-display
