--- a/labscript_devices/BS_341A/BS_341A.md
+++ b/labscript_devices/BS_341A/BS_341A.md
@@ -16,3 +16,43 @@ DDDDD TEMP | Read Temperature
 DDDDD LOCK | Check lock status of all channels
 
 DDDDD DIS [message] | Send string to LCD-display
+
+---
+
+## BS 34-1A Emulator
+This [emulator](testing/emulateSerPort.py) 
+simulates the behavior of the BS 34-1A multichannel voltage source. 
+It allows for testing with BLACS. When started, the emulator creates
+a **virtual serial port** that behaves like a real BS 34-1A device. 
+Programs can connect to this port and communicate with it as if 
+it were the real device.
+
+To launch the emulator:
+
+```bash
+python3 -m testing/BS_341A.emulateSerPort
+```
+You’ll see output like: For BS 34-1A use: /dev/pts/5
+
+Use that port (e.g., /dev/pts/5) when connecting in `connection_table.py`. 
+
+
+## ⚠️ Different Voltage Range on different channels (Hardware Defect)
+
+The real BS 34-1A we own has **non-uniform voltage ranges**:
+
+- **Channel 1** supports ±24 V
+- **Channels 2–8** support ~ ±34 V
+
+Labscript normalizes voltage values using a fixed `voltage_range`
+parameter for the entire device. So, we add a _**dirty**_ workaround.
+
+Set `voltage_range = 34` (maximum), and ensure your code or GUI logic:
+- avoids setting values outside of ±24 V for **Channel 1**
+- optionally warns or clips values to prevent hardware violation
+
+This workaround ensures all normalized values remain safe for the physical hardware, at the cost of limited precision on Channel 1.
+
+Future improvements might include:
+- per-channel range support
+- automatic validation and clipping
