--- a/labscript_devices/BS_341A/BS_341A.md
+++ b/labscript_devices/BS_341A/BS_341A.md
@@ -42,17 +42,9 @@ Use that port (e.g., /dev/pts/5) when connecting in `connection_table.py`.
 The real BS 34-1A we own has **non-uniform voltage ranges**:
 
 - **Channel 1** supports ±24 V
-- **Channels 2–8** support ~ ±34 V
+- **Channels 2–8** support ~ ±34.560 V
 
 Labscript normalizes voltage values using a fixed `voltage_range`
-parameter for the entire device. So, we add a _**dirty**_ workaround.
-
-Set `voltage_range = 34` (maximum), and ensure your code or GUI logic:
-- avoids setting values outside of ±24 V for **Channel 1**
-- optionally warns or clips values to prevent hardware violation
-
-This workaround ensures all normalized values remain safe for the physical hardware, at the cost of limited precision on Channel 1.
-
-Future improvements might include:
-- per-channel range support
-- automatic validation and clipping
+parameter for the entire device. So, we add a _dirty_ workaround
+in `voltage_source.set_voltage()` function. This workaround ensures 
+all normalized values remain safe for the physical hardware.
