--- a/labscript_devices/BS_Series/BS_341A.md
+++ b/labscript_devices/BS_Series/BS_341A.md
@@ -30,7 +30,7 @@ it were the real device.
 To launch the emulator:
 
 ```bash
-python3 -m testing/BS_341A.emulateSerPort
+python3 -m testing/BS_Series.emulateSerPort
 ```
 You’ll see output like: For BS 34-1A use: /dev/pts/5
 
