enhance timing in buffered mode

--- a/labscript_devices/BS_Series/BS_341A.md
+++ b/labscript_devices/BS_Series/BS_341A.md
@@ -6,12 +6,12 @@ Commands are sent via a standard serial interface with standard baud rate = 9600
 
 ---
 ## Timing Strategy
-Since the BS 34-1A has **no internal clock** and **no buffering**, 
+Since the BS 34-1A has no internal clock and no buffering, 
 time-sensitive operations (e.g., updating voltages across a sequence) are 
-implemented using `time.sleep(t)` in a **background thread**, opened in `transition_to_buffered`. 
+implemented using `time.sleep(t)` in a background thread, opened in `transition_to_buffered`. 
 After the whole sequence is done, the thread is closed in `transition_to_manual`.
 
-While this is a naive and dirty approach, it currently works to avoid blocking
+While this is a naive approach, it currently works to avoid blocking
 the main thread. 
 However, we acknowledge that this is not ideal, and we welcome proposals for 
 a cleaner, event-driven timing model.
@@ -97,7 +97,7 @@ Others in the same family are expected to have similar interfaces but may differ
 * etc.
 
 The plan is to extend current BS_ implementation by using subclassing and 
-extending the configurations in [capabilities.json](labscript_devices/BS_Series/models/capabilities.json).
+extending the configurations in [capabilities.json](models/capabilities.json).
 In details: 
 
 To add a new device, the user should:
